Correccion en el metodo de ejecutar comando